--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.7.9",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.4",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
@@ -30,13 +35,27 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "motion": "^11.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-modal-sheet": "^4.0.1",
     "react-native": "0.76.5",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-dialog": "^9.3.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.13.1",
+    "react-native-pdf": "^6.7.6",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-sheet": "^0.1.6",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -44,6 +63,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
