--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@mindinventory/order-tracking": "^1.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -57,6 +58,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sheet": "^0.1.6",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "woby-progress-bar": "^5.0.8"
