--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@mindinventory/order-tracking": "^1.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
@@ -30,6 +31,7 @@
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "^16.0.4",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.5",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -41,23 +43,30 @@
     "react-dom": "18.3.1",
     "react-modal-sheet": "^4.0.1",
     "react-native": "0.76.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-blob-util": "^0.21.2",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.13.1",
     "react-native-pdf": "^6.7.6",
+    "react-native-picker": "^4.3.7",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sheet": "^0.1.6",
+    "react-native-svg": "^15.11.1",
     "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
